# course-description-merged

./: .gitignore  .gitmodules  Cargo.toml  README.adoc  README.md  course-description-merged.tex  description.md
.github/: dependabot.yml
.github/workflows/: pages.yml  rust.yml
src/: degrees.rs  main.rs  teachings.rs
src/degrees/: mod.rs  teachings.rs  year.rs
