[package]
name = "course-description-merged"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
itertools = "0.10.5"
lazy_static = "1.4.0"
reqwest = "0.11"
scraper = "0.15.0"
substring = "1.4.5"
tokio = { version = "1.26.0", features = ["full"] }
